Fixing collapsing navbar on small devices on scrolling .

--- a/src/Sass/components/Troubles/_all_troubles.scss
+++ b/src/Sass/components/Troubles/_all_troubles.scss
@@ -106,6 +106,5 @@
   //}
   .img-placeholder{
     max-width:100%;
-    background-color: red !important;
   }
 }
